service-mesh/dropwizard-app/kubernetesFiles/networking-istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopapp
spec:
  hosts:
  - "*"
  gateways:
  - shopapp-gateway
  http:
  - match:
    - uri:
        exact: /shop/menu
    - uri:
        exact: /shop/order
    route:
    - destination:
        host: shoppingservice
        port:
          number: 50050
